--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fe_boilerplate",
-  "version": "0.1.0",
+  "name": "ghibli_app",
+  "version": "1.0.0",
   "private": false,
   "dependencies": {
     "@material-ui/core": "^4.9.9",
@@ -18,7 +18,6 @@
     "styled-components": "5.0.0"
   },
   "devDependencies": {
-    "cypress": "3.6.0",
     "eslint-config-standard": "12.0.0",
     "eslint-config-standard-jsx": "6.0.2",
     "eslint-plugin-import": "2.17.3",
@@ -28,7 +27,6 @@
     "eslint-plugin-react": "7.13.0",
     "eslint-plugin-standard": "4.0.0",
     "husky": "0.14.3",
-    "jest-styled-components": "7.0.0",
     "prettier": "1.19.1",
     "pretty-quick": "1.4.1",
     "react-test-renderer": "16.8.6"
@@ -36,10 +34,7 @@
   "scripts": {
     "dev": "cross-env REACT_APP_API_ENV=development react-scripts start",
     "test": "react-scripts test",
-    "format": "prettier \"./src/**/*.js\" --write",
-    "format:staged": "pretty-quick --staged",
-    "precommit": "yarn format:staged",
-    "cypress:open": "cypress open"
+    "format": "prettier \"./src/**/*.js\" --write"
   },
   "eslintConfig": {
     "extends": "react-app"
