--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "0.19.0",
     "cross-env": "^7.0.2",
+    "lodash": "^4.17.20",
     "moment": "2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -15,7 +16,9 @@
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.4.1",
-    "styled-components": "5.0.0"
+    "serialize-javascript": "^4.0.0",
+    "styled-components": "5.0.0",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "eslint-config-standard": "12.0.0",
