--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2"
+    "pretty-quick": "^3.0.2",
+    "scheduler": "0.14.0"
   },
   "scripts": {
     "start": "cross-env REACT_APP_API_ENV=development react-scripts start",
